# cactus

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  mkdocs.yml  models.json  sitemap.xml  versions.json
.github/: assemble-docs.sh
.github/workflows/: build.yml  cpp.yml  dco.yml  docs.yml  inference.yml  publish_to_hf.yml  pypi.yml  python.yml  release.yml  verify-pr.yml
android/: CMakeLists.txt  Cactus.android.kt  Cactus.ios.kt  README.md  build.sh  cactus_jni.cpp
android/src/main/: CMakeLists.txt
apple/: CMakeLists.txt  CmakeLists.txt  Info.plist  README.md  build.sh  module.modulemap
benchmarks/python_baseline/: results.json  run_baseline.py
benchmarks/python_vs_cpp/: results.json
bindings/: README.md
bindings/flutter/: README.md  cactus.dart
bindings/kotlin/: Cactus.android.kt  Cactus.common.kt  Cactus.ios.kt  Cactus.kt  README.md  cactus.def
bindings/python/: README.md
bindings/react-native/: README.md  index.ts
bindings/rust/: README.md  cactus.rs
bindings/swift/: Cactus.swift  README.md
blog/: gemma4.md  hybrid_transcription.md  lfm2.5_350m.md  lfm2_24b_a2b.md  parakeet.md
cactus/: CMakeLists.txt  build.sh  cactus.h
cactus-code/: README.md  package-lock.json  package.json
cactus-code/scripts/: bundle-for-pypi.sh
cactus-engine/: CMakeLists.txt  build.sh  cactus_engine.h  test.sh
cactus-engine/src/: batch_scheduler.cpp  bpe.cpp  chat_tools.h  cloud.cpp  complete.cpp  constraints.cpp  embed.cpp  engine.h  engine_image.cpp  gemma_tools.h  graph_ffi.cpp  index.cpp  init.cpp  kv_compress.cpp  kv_compress.h  model.cpp  model_npu.cpp  npu_ane.h  npu_ane.mm  rag.cpp  stream.cpp  telemetry_impl.cpp  tokenizer.cpp  transcribe.cpp  utils.h
cactus-engine/tests/: CMakeLists.txt  asr.cpp  chat.cpp  run.cpp  test_curl.cpp  test_embed.cpp  test_kv_compress.cpp  test_llm.cpp  test_needle.cpp  test_rag.cpp  test_stream.cpp  test_stream_transcribe.cpp  test_stt.cpp  test_telemetry.cpp  test_utils.h  test_vlm.cpp  transcribe.cpp
cactus-engine/tests/android/: CMakeLists.txt  run.sh
cactus-engine/tests/ios/: configure_xcode.rb  run.sh
cactus-engine/tests/ios/CactusTest/CactusTest/: CactusTest.entitlements
cactus-graph/: CMakeLists.txt  cactus_graph.h  test.sh
cactus-graph/src/: builder.cpp  core.cpp  execute.cpp  graph_ffi.cpp  io.cpp  last_error.cpp  ops_cache.cpp  ops_math.cpp  ops_nn.cpp  ops_tensor.cpp  param_io.cpp
cactus-graph/tests/: test_cache.cpp  test_dynamic_shapes.cpp  test_io.cpp  test_nn.cpp  test_ops.cpp
cactus-kernels/: CMakeLists.txt  cactus_kernels.h  test.sh
cactus-kernels/src/: attention.cpp  conv.cpp  image.cpp  lstm.cpp  matmul.cpp  threading.h
cactus-kernels/tests/: test_conv.cpp  test_elementwise.cpp  test_matmul.cpp  test_reduce.cpp
cactus/engine/: engine.h  engine_model.cpp  engine_sp.cpp  engine_tokenizer.cpp  model_gemma.cpp  model_qwen.cpp
cactus/ffi/: cactus_complete.cpp  cactus_ffi.cpp  cactus_ffi.h  cactus_init.cpp  cactus_stream.cpp  cactus_transcribe.cpp  cactus_utils.h
cactus/graph/: graph.h  graph_builder.cpp
cactus/kernel/: kernel.h  kernel_attention.cpp  kernel_nn.cpp  kernel_utils.h
cactus/models/: model.h  model_lfm2vl.cpp  model_parakeet_tdt.cpp  model_whisper.cpp
cpp/: CMakeLists.txt  llama-chat.cpp
cpp/example/: CMakeLists.txt  main_debug.cpp  main_llm.cpp
cpp/minja/: chat-template.hpp
docs/: cactus_engine.md  cactus_graph.md  cactus_hybrid.md  cactus_index.md  cactus_kernels.md  cactus_quants.md  cactus_transpiler.md  choose-bindings.md  finetuning.md  quickstart.md
flutter/: CHANGELOG.md  README.md
flutter/android/: jniLibs.zip.REMOVED.git-id
python/: README.md  pyproject.toml  requirements.txt
python/cactus/: __init__.py  server.py
python/cactus/bindings/: api.py  cactus.py  graph.py
python/cactus/cli/: __init__.py  auth.py  clean.py  code.py  common.py  compile.py  config_utils.py  convert.py  download.py  eval.py  list.py  misc.py  model.py  publish_to_hf.py  run.py  runtime.py  serve.py  test.py  transcribe.py  transpile.py  upload.py  utils.py
python/cactus/convert/: cli.py  handoff_probe.py
python/cactus/convert/cactus_adapters/: config_utils.py  tensor_io.py  tokenizer.py
python/cactus/convert/calibration/: hessian.py
python/cactus/convert/export/: qdq.py  reports.py
python/cactus/convert/model_adapters/: adapters.py  detection.py  naming.py  policy.py
python/cactus/convert/tests/: test_gemma4_adapter.py  test_lfm2_adapter.py  test_policy.py  test_qwen_adapter.py
python/cactus/transpile/: README.md  aten_ops.py  capture_jax.py  capture_pytorch.py  component_bundle_runtime.py  component_pipeline.py  component_plan.py  hf_model.py  import_ir.py  importers.py  jax_semantic_rewrites.py  jax_user_graph_bundle.py  lower.py  model_adapters.py  model_profiles.py  multimodal_runtime.py  ops.py  optimize_graph.py  runtime_compat.py  tdt_runtime.py  weight_binding.py  weight_compat.py
python/cactus/transpile/canonicalize/: cleanup.py
python/cactus/transpile/fusion/: rms_norm.py
python/cactus/transpile/npu/: README.md  audio.py  coremltools_patches.py  pipeline.py  source.py  vision.py
python/src/: cactus.py  cli.py  config_utils.py  converter.py  tokenizer.py
python/tests/: bundles.py  test_bindings.py  test_capture_jax.py  test_capture_jax_user_graph_bundle.py  test_chat_template_golden.py  test_cli_run.py  test_cli_run_transpiled.py  test_cli_transpile_defaults.py  test_cloud_handoff_live.py  test_component_plan.py  test_download.py  test_encoder_cross_kv_route.py  test_graph.py  test_model.py  test_optimize_gemma4_attention.py  test_server.py  test_server_live.py  test_tool_constraint_state.py  test_transpile_aten_ops.py  test_transpile_importers.py  test_transpile_layer_keys.py  test_transpile_weight_compat.py
react/: README.md  package.json
rust/: README.md
scripts/: build-android.sh  build-ios.sh  publish.sh  upload_weights.py
tests/: run.sh  test_engine.cpp  test_kernel.cpp  test_performance.cpp  test_stt.cpp  test_utils.h
tools/: convert_hf.py
v1.14/: sitemap.xml
v2.0/: index.html  sitemap.xml
(+56 files in other folders)
