[project]
name = "cactus"
version = "1.14.0"
description = "Cactus Python tools"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0,<3",
    "transformers>=5.5.4,<6",
    "numpy>=1.26.0,<3",
    "huggingface-hub>=1.5.0,<2.0",
]

[project.optional-dependencies]
vlm = ["Pillow>=11.0.0,<12", "torchvision>=0.23.0,<1"]

[project.scripts]
cactus = "cactus.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cactus*"]
