cmake_minimum_required(VERSION 3.10)
project(CactusEngineTests LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(APPLE)
    set(CMAKE_OSX_ARCHITECTURES "arm64")
endif()

if(NOT TARGET cactus_engine)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/cactus-engine)
endif()

file(GLOB TEST_SOURCES "test_*.cpp")
list(REMOVE_ITEM TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/test_utils.cpp")

foreach(TEST_FILE ${TEST_SOURCES})
    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_FILE} test_utils.cpp)
    target_link_libraries(${TEST_NAME} PRIVATE cactus_engine)
endforeach()

if(TARGET test_curl AND EXISTS "${CACTUS_CURL_ROOT}/include/curl/curl.h")
    target_include_directories(test_curl PRIVATE "${CACTUS_CURL_ROOT}/include")
endif()

find_package(SDL2 QUIET CONFIG)
if(NOT SDL2_FOUND)
    find_library(SDL2_LIBRARY NAMES SDL2 PATHS /opt/homebrew/lib /usr/local/lib)
    find_path(SDL2_INCLUDE_DIR SDL.h PATHS /opt/homebrew/include/SDL2 /usr/local/include/SDL2)
    if(SDL2_LIBRARY AND SDL2_INCLUDE_DIR)
        set(SDL2_FOUND TRUE)
    endif()
endif()
if(SDL2_FOUND)
    add_executable(run run.cpp test_utils.cpp)
    target_link_libraries(run PRIVATE cactus_engine)
    if(TARGET SDL2::SDL2)
        target_link_libraries(run PRIVATE SDL2::SDL2)
    else()
        target_link_libraries(run PRIVATE ${SDL2_LIBRARY})
        target_include_directories(run PRIVATE ${SDL2_INCLUDE_DIR})
    endif()
endif()

add_executable(transcribe transcribe.cpp)
target_link_libraries(transcribe PRIVATE cactus_engine)
if(SDL2_FOUND)
    target_compile_definitions(transcribe PRIVATE HAVE_SDL2)
    if(TARGET SDL2::SDL2)
        target_link_libraries(transcribe PRIVATE SDL2::SDL2)
    else()
        target_link_libraries(transcribe PRIVATE ${SDL2_LIBRARY})
        target_include_directories(transcribe PRIVATE ${SDL2_INCLUDE_DIR})
    endif()
endif()
